<resources>
    <string name="app_name">XML Layout</string>
    <string name="costOfService">Cost of Service</string>
    <string name="how_was_the_service">How was the service?</string>
<!--    <string name="amazingService">Amazing (20%)</string>-->
<!--    <string name="goodService">Good (18%)</string>-->
<!--    <string name="okService">Okay (15%)</string>-->
<!--    <string name="roundUpSwitch">Round up tip?</string>-->
<!--    <string name="calculateButton">Calculate</string>-->
<!--    <string name="tipAmountText">Tip Amount</string>-->
    <string name="amazing_service">Amazing (20%)</string>
    <string name="good_service">Good (18%)</string>
    <string name="ok_service">Okay (15%)</string>
    <string name="roundUpTip">Round Up Tip?</string>
    <string name="calculate">calculate</string>
    <string name="tipAmount">Tip Amount</string>
</resources>